--- a/index.html
+++ b/index.html
@@ -1,78 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="icon" type="image/x-icon" href="./main/favicon.ico" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Budaya Technology</title>
-    <link as="image" rel="image prefetch" href="./image/aset-1.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/aset-2.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/chatbot.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/cloud.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/Curtain-left.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/Curtain-right.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/kipas.webp" type="image/webp" crossorigin />
-    <link as="image" rel="image prefetch" href="./image/logo.webp" type="image/webp" crossorigin />
-    <link rel="preconnect" href="./fonts/ReadexPro-bold.ttf" />
-    <link href="./manifest.json" rel="manifest" />
-    <script src="./js/script.js"></script>
-  </head>
-  <body class="fade">
-    <!-- Navbar Hamburger -->
-    <nav class="bar">
-      <h2 class="name">Tech</h2>
-      <div class="nav-item matikan">
-        <a class="nav-link" href="./index.html" target="_blank" rel="noopener">Beranda</a>
-      </div>
-      <div class="nav-item matikan">
-        <a class="nav-link" href="./main/tentang.html" target="_blank" rel="noopener">Tentang</a>
-      </div>
-      <div class="nav-item matikan">
-        <a href="" class="nav-link">Menu</a>
-        <div class="nav-dropdown">
-          <a href="https://m.youtube.com/channel/UCL0ithmr-UVQa1c4y7cduOQ" target="_blank" rel="noopener">Youtube</a>
-          <a href="https://myanimelist.net/profile/Daffabot" target="_blank" rel="noopener">Myanimelist</a>
-          <a href="https://github.com/Daffabot" target="_blank" rel="noopener">Github</a>
-        </div>
-      </div>
-      <div class="nav-item matikan">
-        <a class="nav-link" href="./main/kontak.html" target="_blank" rel="noopener">Kontak</a>
-      </div>
-      <div class="menu-toggle" onclick="toggleNavbar()">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </nav>
-    <div class="container">
-      <!-- Main Content -->
-      <main>
-        <section class="wrapper-main one">
-          <!-- Header -->
-          <header class="swing-in-left swing-in-right">
-            <div class="chara swing-in-left swing-in-right"></div>
-            <div class="cloud-left cloud swing-in-left"></div>
-            <div class="logo">
-              <p>Tech</p>
-            </div>
-            <div class="cloud-right cloud swing-in-left"></div>
-          </header>
-          <div class="main">
-            <div class="center fade-in-top">
-              <p class="name">Tech</p>
-              <div class="quote"></div>
-              <button class="btn-main">Get Started</button>
-            </div>
-            <div class="bg-bot"></div>
-          </div>
-        </section>
 
-        <section class="wrapper-main two">
-          <div class="main">
-            
+<head>
+  <link rel="icon" type="image/x-icon" href="./main/favicon.ico" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Budaya Technology</title>
+  <link as="image" rel="image prefetch" href="./image/aset-1.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/aset-2.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/chatbot.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/cloud.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/Curtain-left.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/Curtain-right.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/kipas.webp" type="image/webp" crossorigin />
+  <link as="image" rel="image prefetch" href="./image/logo.webp" type="image/webp" crossorigin />
+  <link rel="preconnect" href="./fonts/ReadexPro-bold.ttf" />
+  <link href="./manifest.json" rel="manifest" />
+  <script src="./js/script.js"></script>
+</head>
+
+<body class="fade">
+  <!-- Navbar Hamburger -->
+  <nav class="bar">
+    <h2 class="name">Tech</h2>
+    <div class="nav-item matikan">
+      <a class="nav-link" href="./index.html" target="_blank" rel="noopener">Beranda</a>
+    </div>
+    <div class="nav-item matikan">
+      <a class="nav-link" href="./main/tentang.html" target="_blank" rel="noopener">Tentang</a>
+    </div>
+    <div class="nav-item matikan">
+      <a href="" class="nav-link">Menu</a>
+      <div class="nav-dropdown">
+        <a href="https://m.youtube.com/channel/UCL0ithmr-UVQa1c4y7cduOQ" target="_blank" rel="noopener">Youtube</a>
+        <a href="https://myanimelist.net/profile/Daffabot" target="_blank" rel="noopener">Myanimelist</a>
+        <a href="https://github.com/Daffabot" target="_blank" rel="noopener">Github</a>
+      </div>
+    </div>
+    <div class="nav-item matikan">
+      <a class="nav-link" href="./main/kontak.html" target="_blank" rel="noopener">Kontak</a>
+    </div>
+    <div class="menu-toggle" onclick="toggleNavbar()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </nav>
+  <div class="container">
+    <!-- Main Content -->
+    <main>
+      <section class="wrapper-main one">
+        <!-- Header -->
+        <header class="swing-in-left swing-in-right">
+          <div class="chara swing-in-left swing-in-right"></div>
+          <div class="cloud-left cloud swing-in-left"></div>
+          <div class="logo">
+            <p>Tech</p>
           </div>
-        </section>
+          <div class="cloud-right cloud swing-in-left"></div>
+        </header>
+        <div class="main">
+          <div class="center fade-in-top">
+            <p class="name">Tech</p>
+            <div class="quote"></div>
+            <button class="btn-main">Get Started</button>
+          </div>
+          <div class="bg-bot"></div>
+        </div>
+      </section>
+
+      <section class="wrapper-main two">
+        <div class="main">
+          <p class="heading-content">Kota</p>
+          <div class="content">
+            <div class="img"></div>
+            <p class="desk-1">
+              Dalam gemerlap keindahan pulau Jawa, Kota Solo menjulang sebagai salah satu destinasi wisata yang tak
+              tertandingi. Kaya akan warisan budaya dan tradisi yang dalam, Kota Solo memancarkan pesona tak terlupakan
+              bagi setiap pengunjungnya. Dengan slogan yang sangat tepat, 'Solo The Spirit of Java,' kota ini bukan
+              sekadar sebuah tempat, melainkan jiwanya sendiri yang terpatri dalam kekayaan budaya Jawa yang begitu
+              kental. Keanggunan kota ini semakin bersinar berkat berbagai pagelaran dan festival budaya yang secara
+              rutin mengisi kalender kota, membawa pengalaman budaya yang tak terlupakan kepada siapa pun yang berani
+              menjelajahinya. <br>
+              <br>
+              Tak hanya berupa budaya benda, Kota Solo juga memiliki budaya tak benda yang diakui di kancah
+              internasional. Bahkan, beberapa budaya di Kota Solo telah dinobatkan oleh UNESCO sebagai warisan budaya
+              dunia. Budaya tersebut, diantaranya batik, keris, wayang, dan gamelan, menceritakan kisah panjang
+              peradaban Jawa yang kaya dan memukau. Mereka bukan sekadar warisan, melainkan cerminan dari kebijaksanaan
+              dan estetika yang telah melampaui batas waktu, menggoda dan menginspirasi generasi setelah generasi. Batik
+              menghadirkan seni pewarnaan kain yang anggun, keris adalah lambang keberanian dan kehormatan, wayang
+              adalah narasi visual yang mendalam, sementara gamelan adalah simfoni suara yang menggugah jiwa. Dengan
+              warisan budaya yang begitu berharga ini, Kota Solo tidak hanya menjadi tujuan wisata, melainkan juga
+              penjaga api kemegahan budaya Jawa yang tak terpadamkan.
+            </p>
+          </div>
+        </div>
+      </section>
 
       <section class="wrapper-main three">
         <div class="main">
@@ -80,67 +104,68 @@
             <p class="ourteam">Our Team</p>
             <div class="card">
               <img src="https://avatars.githubusercontent.com/u/96946212?v=4" alt="Daffa" class="profile">
-            <h1>Daffa</h1>
-            <p class="title">Ketua Tim</p>
-            <p>SMKN 1 Subang</p>
-            <p><button class="contact">Contact</button></p>
-              </div>
+              <h1>Daffa</h1>
+              <p class="title">Ketua Tim</p>
+              <p>SMKN 1 Subang</p>
+              <p><button class="contact">Contact</button></p>
+            </div>
             <div class="card">
               <img src="https://avatars.githubusercontent.com/u/111733086?v=4" alt="Wibi" class="profile">
-            <h1>Wibi</h1>
-            <p class="title">Anggota Tim</p>
-            <p>SMKN 1 Subang</p>
-            <p><button class="contact">Contact</button></p>
+              <h1>Wibi</h1>
+              <p class="title">Anggota Tim</p>
+              <p>SMKN 1 Subang</p>
+              <p><button class="contact">Contact</button></p>
             </div>
             <div class="card">
               <img src="https://avatars.githubusercontent.com/u/106051351?v=4" alt="Ahsan" class="profile">
-            <h1>Ahsan</h1>
-            <p class="title">Anggota Tim</p>
-            <p>SMKN 1 Subang</p>
-            <p><button class="contact">Contact</button></p>
-            </div>
+              <h1>Ahsan</h1>
+              <p class="title">Anggota Tim</p>
+              <p>SMKN 1 Subang</p>
+              <p><button class="contact">Contact</button></p>
             </div>
           </div>
         </div>
-      </section>
+  </div>
+  </section>
 
-      <section class="wrapper-main four">
-        <div class="main">
-            <div class="wrap-contact2">
-            <form class="contact2-form validate-form">
-            <span class="contact2-form-title">
+  <section class="wrapper-main four">
+    <div class="main">
+      <div class="wrap-contact2">
+        <form class="contact2-form validate-form">
+          <span class="contact2-form-title">
             Contact Us
-            </span>
-            <div class="wrap-input2 validate-input" data-validate="Name is required">
+          </span>
+          <div class="wrap-input2 validate-input" data-validate="Name is required">
             <input class="input2" type="text" name="name">
             <span class="focus-input2" data-placeholder="NAME"></span>
-            </div>
-            <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+          </div>
+          <div class="wrap-input2 validate-input" data-validate="Valid email is required: ex@abc.xyz">
             <input class="input2" type="text" name="email">
             <span class="focus-input2" data-placeholder="EMAIL"></span>
-            </div>
-            <div class="wrap-input2 validate-input" data-validate="Message is required">
+          </div>
+          <div class="wrap-input2 validate-input" data-validate="Message is required">
             <textarea class="input2" name="message"></textarea>
             <span class="focus-input2" data-placeholder="MESSAGE"></span>
-            </div>
-            <div class="container-contact2-form-btn">
+          </div>
+          <div class="container-contact2-form-btn">
             <div class="wrap-contact2-form-btn">
-            <div class="contact2-form-bgbtn"></div>
-            <button class="contact2-form-btn">
-            Send Your Message
-            </button>
+              <div class="contact2-form-bgbtn"></div>
+              <button class="contact2-form-btn">
+                Send Your Message
+              </button>
             </div>
-            </div>
-            </form>
-            </div>
-        </div>
-      </section>
-    </main>
-
-      <!-- Footer -->
-      <footer></footer>
+          </div>
+        </form>
+      </div>
     </div>
-    <div class="stt stt__block_black"></div>
-    <script src="./js/register.js"></script>
-  </body>
+  </section>
+  </main>
+
+  <!-- Footer -->
+  <footer></footer>
+  </div>
+  <div class="stt stt__block_black"></div>
+  <script src="./js/register.js"></script>
+</body>
+
 </html>
