--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
               sekadar sebuah tempat, melainkan jiwanya sendiri yang terpatri dalam kekayaan budaya Jawa yang begitu
               kental. Keanggunan kota ini semakin bersinar berkat berbagai pagelaran dan festival budaya yang secara
               rutin mengisi kalender kota, membawa pengalaman budaya yang tak terlupakan kepada siapa pun yang berani
-              menjelajahinya. <br>
+              menjelajahinya.
+              <br>
               <br>
               Tak hanya berupa budaya benda, Kota Solo juga memiliki budaya tak benda yang diakui di kancah
               internasional. Bahkan, beberapa budaya di Kota Solo telah dinobatkan oleh UNESCO sebagai warisan budaya
@@ -92,8 +93,35 @@
               menghadirkan seni pewarnaan kain yang anggun, keris adalah lambang keberanian dan kehormatan, wayang
               adalah narasi visual yang mendalam, sementara gamelan adalah simfoni suara yang menggugah jiwa. Dengan
               warisan budaya yang begitu berharga ini, Kota Solo tidak hanya menjadi tujuan wisata, melainkan juga
-              penjaga api kemegahan budaya Jawa yang tak terpadamkan.
+              penjaga api kemegahan budaya Jawa yang tak terpadamkan. Ini lah beberapa budaya yang ada di kota solo :
             </p>
+          </div>
+          <div class="content-2">
+            <ol>
+              <li>Batik</li>
+              <p>Kota Solo, dengan kemegahannya, dikenal sebagai salah satu pusat utama industri batik di Indonesia,
+                terutama di Kelurahan Laweyan dan Kauman. Di sini, seni pembuatan batik mengalir seperti sungai yang tak
+                pernah surut, mengubah lembaran kain mori menjadi karya seni kain batik yang memikat dengan berbagai
+                motif dan warna yang memukau. Lebih dari sekadar pakaian, batik adalah cerminan nilai-nilai kearifan
+                lokal yang dalam. Di dalam setiap motifnya tersembunyi cerita: gambar hewan, bunga yang mekar, pola
+                geometris, dan beragam elemen lainnya, semuanya bercerita dan memiliki makna mendalam bagi yang
+                mengenakannya.
+                <br>
+                <br>
+                Dahulu, batik adalah busana yang dihadirkan dalam momen-momen khusus, seperti pernikahan, khitanan,
+                mitoni/tujuh bulanan, dan banyak upacara lainnya. Namun, seiring berjalannya waktu, batik telah
+                mengambil tempat istimewa dalam kehidupan sehari-hari masyarakat. Itulah yang membuatnya begitu
+                istimewa, bukan hanya karena fungsinya, tetapi karena pesona budayanya yang melekat dalam setiap serat
+                kainnya.
+                <br>
+                <br>
+                Ketulusan cinta untuk budaya batik ini terbukti ketika UNESCO mengakui keunikan dan pentingannya dengan
+                menetapkan batik sebagai Warisan Kemanusiaan untuk Budaya Lisan dan Nonbendawi pada tanggal 2 Oktober
+                2009. Hari itu, bukan hanya menjadi sejarah bagi batik, tetapi juga menjadi momen bersejarah bagi
+                seluruh Indonesia. Hari Batik Nasional menjadi pengingat kita akan kekayaan budaya yang harus kita
+                lestarikan dan kenang, sebagai sebuah warisan berharga yang menghubungkan kita dengan masa lalu dan
+                mengilhami masa depan.</p>
+            </ol>
           </div>
         </div>
       </section>
