--- a/index.html
+++ b/index.html
@@ -118,7 +118,49 @@
           </div>
           <div class="content-3">
             <p class="heading-content">Batik</p>
-            
+            <p class="desk">
+              Keris Solo adalah salah satu senjata tradisional paling terkenal di Indonesia dan memiliki nilai sejarah
+              dan seni yang tinggi. Ini juga digunakan dalam berbagai upacara adat dan sering menjadi bagian penting
+              dari warisan budaya Jawa. Keris Solo mencerminkan keindahan seni ukir Jawa, kebijaksanaan filosofis, serta
+              rasa kebanggaan dan identitas budaya masyarakat Jawa. Dalam berbagai kesempatan, keris ini tidak hanya
+              berperan sebagai senjata, tetapi juga sebagai simbol status sosial, perlindungan spiritual, dan warisan
+              keluarga yang dihormati.
+            </p>
+          </div>
+          <div class="content-4">
+            <p class="heading-content">Keris</p>
+            <p class="desk">
+              Wayang Kulit Solo adalah bukti kekayaan warisan budaya Indonesia dan merupakan salah satu bentuk seni
+              tradisional yang paling indah dan mendalam di dunia. Pertunjukan ini tidak hanya menghibur, tetapi juga
+              mengajarkan nilai-nilai kearifan lokal, etika, serta cerminan dalam kehidupan sehari-hari. Kehadirannya
+              adalah sebagai sebuah aset budaya yang sangat berharga bagi masyarakat Solo, dan bahkan, bagi seluruh
+              Indonesia. Dalam setiap sentuhan kayu, gerakan dalang yang penuh makna, dan pesan moral yang tersirat,
+              Wayang Kulit mengingatkan kita akan keunikan dan keindahan kultur kita yang memperkaya identitas dan
+              kebangsaan.
+            </p>
+          </div>
+          <div class="content-5">
+            <p class="heading-content">Wayang</p>
+            <p class="desk">
+              Batik Solo adalah harta budaya yang sangat berharga bagi Indonesia. Tidak hanya sekadar pakaian, tetapi
+              juga sebuah bentuk seni yang mengalir dari hati dan merayakan warisan budaya yang kaya di kota Solo. Ini
+              adalah kisah yang terpintal dengan indah dalam serat kain, menghadirkan motif-motif berwarna cerah yang
+              menceritakan cerita tentang perjalanan budaya, tradisi, dan keindahan alam yang melimpah di daerah ini.
+              Dalam setiap goresan lilin dan celupan warna, terdapat kejelian tangan-tangan terampil yang telah merawat
+              tradisi ini selama berabad-abad. Batik Solo adalah jendela yang membuka pandangan ke dalam jiwa budaya
+              yang kaya, menghadirkan kebanggaan dalam setiap kain yang ditenun dan menghidupkan kembali sejarah yang
+              telah berabad-abad berakar di bumi Solo.
+            </p>
+          </div>
+          <div class="content-6">
+            <p class="heading-content">Gamelan</p>
+            <p class="desk">
+              Gamelan Solo adalah bagian integral dari kebudayaan Jawa dan memiliki nilai seni, sejarah, dan budaya yang
+              sangat kaya. Ini adalah salah satu bentuk seni yang paling ikonik dan dihargai di Indonesia serta menjadi
+              bagian penting dalam melestarikan tradisi budaya Jawa. Melalui keindahan musiknya yang timeless, Gamelan
+              Solo tidak hanya menghibur, tetapi juga menghubungkan generasi-generasi, menjembatani masa lalu dengan
+              masa kini, dan memperkuat rasa identitas budaya yang kuat di tengah perubahan zaman.
+            </p>
           </div>
         </div>
       </section>
